[gd_scene load_steps=7 format=3 uid="uid://cs7a4nfup4q1k"]

[ext_resource type="Script" path="res://scripts/enemySpawn_1.gd" id="1_1u2ix"]
[ext_resource type="Texture2D" uid="uid://bignnyctydhb3" path="res://sprites/inimigos/inimigo - 3 - spawn1.png" id="1_ujrri"]
[ext_resource type="Texture2D" uid="uid://de28iuei0b4xe" path="res://sprites/inimigos/damaged.png" id="2_wne2g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0goyt"]
size = Vector2(67, 31)

[sub_resource type="SpriteFrames" id="SpriteFrames_16enf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_wne2g")
}],
"loop": true,
"name": &"damage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_ujrri")
}],
"loop": true,
"name": &"normal",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kgos7"]
size = Vector2(68, 32)

[node name="enemySpawn1" type="RigidBody2D" groups=["enemy", "f_fire"]]
position = Vector2(200, 200)
mass = 1000.0
gravity_scale = 0.0
script = ExtResource("1_1u2ix")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3.5, -26.5)
shape = SubResource("RectangleShape2D_0goyt")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(3, -26)
scale = Vector2(0.05, 0.05)
sprite_frames = SubResource("SpriteFrames_16enf")
animation = &"normal"
autoplay = "normal"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(3, -26)
shape = SubResource("RectangleShape2D_kgos7")

[node name="Timer" type="Timer" parent="."]
wait_time = 7.5
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.05

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered" flags=18]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
